# trend-momentum-x

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  GROK.md  PROJECT_X_PY_REFERENCE.md  README.md  analyze_signals.py  main.py  pyproject.toml  test_signals_update.py  validate_api_usage.py
.gemini/: settings.json
scripts/: test_all_events.py  test_column_fix.py  test_events.py  test_get_data.py  test_indicator_columns.py  test_orderbook_api.py  test_pattern_columns.py  test_pattern_columns_simple.py  test_simple_data.py  test_strategy_events.py
strategy/: __init__.py  exits.py  orderbook.py  risk_manager.py  signals.py  trend_analysis.py
tests/: __init__.py  conftest.py  test_exits.py  test_integration.py  test_orderbook.py  test_risk_manager.py  test_signals.py  test_trend_analysis.py
utils/: config.py  logger.py
